fix(breadcrumb-bar): remove white space

--- a/src/components/General/BreadcrumbBar/BreadcrumbBar.css
+++ b/src/components/General/BreadcrumbBar/BreadcrumbBar.css
@@ -1,8 +1,6 @@
 .breadcrumb-bar-nav {
   width: 100%;
   flex: 1 1 100%;
-  padding: 1rem 2rem;
-  margin: 0.5rem;
 }
 .breadcrumb-bar-ul {
   display: flex;
